# python-tf2-utilities

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
tf2utilities/: main.py  schema.py  sku.py  webapi.py
tf2utilities/.claude/: settings.local.json
